# internal/sps/api/resources.go
@@ -1,9 +1,13 @@
 package api
 
 import (
-	"mkuznets.com/go/sps/internal/herror"
-	"mkuznets.com/go/sps/internal/types"
+	"mkuznets.com/go/sps/internal/ytils/yerr"
+	"mkuznets.com/go/sps/internal/ytils/ytime"
 )
+
+type IdResponse struct {
+	Id string `json:"id"`
+} // @name IdResponse
 
 type CreateChannelRequest struct {
 	Title       string `json:"title" example:"Bored Owls Online Radio" extensions:"x-order=0"`
@@ -22,12 +26,13 @@ type CreateEpisodeRequest struct {
 
 type ChannelResponse struct {
 	Id          string     `json:"id" example:"ch_2K9BWVNuo3sG4yM322fbP3mB6ls" extensions:"x-order=0"`
-	Title       string     `json:"title" example:"Bored Owls Online Radio" extensions:"x-order=1"`
+	FeedUrl     string     `json:"feed_url" extensions:"x-order=1"`
+	Title       string     `json:"title" example:"Bored Owls Online Radio" extensions:"x-order=2"`
 	Link        string     `json:"link" example:"https://example.com" extensions:"x-order=3"`
 	Authors     string     `json:"authors" example:"The Owl" extensions:"x-order=4"`
 	Description string     `json:"description" example:"Bored owls talk about whatever happens to be on their minds" extensions:"x-order=5"`
-	CreatedAt   types.Time `json:"created_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=6"`
-	UpdatedAt   types.Time `json:"updated_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=7"`
+	CreatedAt   ytime.Time `json:"created_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=6"`
+	UpdatedAt   ytime.Time `json:"updated_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=7"`
 } // @name ChannelResponse
 
 type EpisodeResponse struct {
@@ -38,8 +43,8 @@ type EpisodeResponse struct {
 	Link        string        `json:"link" example:"https://example.com" extensions:"x-order=4"`
 	Authors     string        `json:"authors" example:"The Owl" extensions:"x-order=5"`
 	Description string        `json:"description" example:"Bored owls talk about whatever happens to be on their minds" extensions:"x-order=6"`
-	CreatedAt   types.Time    `json:"created_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=7"`
-	UpdatedAt   types.Time    `json:"updated_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=8"`
+	CreatedAt   ytime.Time    `json:"created_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=7"`
+	UpdatedAt   ytime.Time    `json:"updated_at" swaggertype:"string" format:"date-time" example:"2023-01-01T01:02:03.456Z" extensions:"x-order=8"`
 } // @name EpisodeResponse
 
 type FileResponse struct {
@@ -50,7 +55,7 @@ type FileResponse struct {
 }
 
 // Only used in Swagger docs.
-type _ herror.Response // @name ErrorResponse
+type _ yerr.Response // @name ErrorResponse
 
 type UploadResponse struct {
 	Id string `json:"id" example:"file_2K9BWVNuo3sG4yM322fbP3mB6ls" extensions:"x-order=0"`
